# solana-mpp-sdk

./: .gitignore  README.md  justfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
demo/: README.md
demo/app/: package-lock.json
demo/app/src/: App.tsx  Landing.tsx  SwigPlayground.tsx
demo/server/: package-lock.json
docs/operations/: session.md
examples/: client.ts  server.ts
rust/: Cargo.toml
rust/examples/: local_session_demo.rs
rust/src/: error.rs  lib.rs  store.rs
rust/src/client/: mod.rs  multi_delegate.rs  session.rs
rust/src/client/session/: active_session.rs  fetch.rs  mod.rs  paid_response.rs  policy.rs  receipt.rs  registry.rs  session_client.rs
rust/src/program/: mod.rs
rust/src/program/payment_channels/: README.md  canonical_tx.rs  ed25519.rs  ix.rs  mod.rs  program_binary.sha256  rpc.rs  splits.rs  splits_ext.rs  state.rs  verify.rs  voucher.rs
rust/src/protocol/core/: challenge.rs  error_code.rs  headers.rs  mod.rs
rust/src/protocol/intents/: session.rs
rust/src/server/: charge.rs  mod.rs  session.rs
rust/src/server/session/: challenge.rs  close.rs  ix.rs  mod.rs  open.rs  recover.rs  topup.rs  tx_shape.rs  voucher.rs
rust/tests/: README.md  charge_integration.rs  session_l0_pda.rs  session_l0_splits.rs  session_l0_wire.rs  session_l1_client_roundtrip.rs  session_l1_close_handler.rs  session_l1_distribute_oracle.rs  session_l1_ed25519_oracle.rs  session_l1_lite_svm_smoke.rs  session_l1_open_handler.rs  session_l1_open_oracle.rs  session_l1_recover.rs  session_l1_request_close_oracle.rs  session_l1_settle_finalize_oracle.rs  session_l1_tombstone_oracle.rs  session_l1_topup_handler.rs  session_l1_topup_oracle.rs  session_l1_voucher_handler.rs
rust/tests/common/: lite_svm_client.rs  mod.rs
rust/tests/fixtures/: .gitignore
scripts/: fetch-program-binary.sh
src/: Methods.ts
src/client/: Charge.ts
src/server/: Charge.ts
